@@ -86,6 +86,10 @@ Changes in backwards compatibility policy
   DictionaryCompoundWordTokenFilter and HyphenationCompoundWordTokenFilter don't
   update offsets anymore. (Adrien Grand)
 
+* LUCENE-5015: SamplingAccumulator no longer corrects the counts of the sampled 
+  categories. You should set TakmiSampleFixer on SamplingParams if required (but 
+  notice that this means slower search). (Rob Audenaerde, Gilad Barkai, Shai Erera)
+
 Bug Fixes
 
 * LUCENE-4997: Internal test framework's tests are sensitive to previous 
